# Research_assistant

./: .gitignore  README.md  app.py  frontend.html  frontend.jsx  graph.py  pyproject.toml  requirements.txt  run.bat  server.py  working_research_assistant.py
